# nektor

./: .gitignore  CLAUDE.md  Cargo.toml  DPC_ANN_partie1.docx  README.md
.claude/: settings.json
.claude/agents/: policy-author.md  prover.md  rust-standards.md  toon-expert.md
.claude/commands/: tasks.md
cmd/nectar/: Cargo.toml
cmd/nectar/src/: main.rs
cmd/nectar/src/commands/: compile.rs  explain.rs  init.rs  mod.rs  propose.rs  prove.rs  watch.rs
crates/nectar_claude/: Cargo.toml
crates/nectar_claude/src/: client.rs  error.rs  lib.rs  prompt.rs  response.rs
crates/nectar_compiler/: Cargo.toml
crates/nectar_compiler/src/: compiler.rs  error.rs  lib.rs  lockfile.rs  match_expr.rs  refinery.rs  waggle.rs
crates/nectar_corpus/: Cargo.toml
crates/nectar_corpus/src/: corpus.rs  encoder.rs  error.rs  fixtures.rs  lib.rs  loader.rs  reservoir.rs  span.rs  trace.rs
crates/nectar_corpus/src/ingestor/: honeycomb.rs  json.rs  mod.rs  otlp.rs
crates/nectar_prover/: Cargo.toml
crates/nectar_prover/src/: analysis.rs  checks.rs  error.rs  lib.rs  prover.rs  replay.rs  result.rs  simulation.rs  traffic.rs
crates/nectar_vopr/: Cargo.toml  TEST_STRATEGY.md
crates/nectar_vopr/src/: campaigns.rs  chaos.rs  generators.rs  harness.rs  lib.rs  replay.rs  simulation.rs  synthetic.rs
crates/toon_policy/: Cargo.toml
crates/toon_policy/src/: error.rs  lib.rs  model.rs  parser.rs
docs/: corpus-format.md  vision.md
fixtures/: README.md
fixtures/corpus/: errors.json  failure_patterns.json  happy_path.json  high_cardinality.json  latency_distributions.json  microservices_topology.json  mixed.json  observability_patterns.json  slow_requests.json
