[workspace]
resolver = "2"
members = [
    "crates/toon_policy",
    "crates/nectar_corpus",
    "crates/nectar_claude",
    "crates/nectar_prover",
    "crates/nectar_compiler",
    "crates/nectar_vopr",
    "cmd/nectar",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nectar Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/nectar"
rust-version = "1.75"
description = "AI-native sampling policy engine for Honeycomb Refinery"
keywords = ["observability", "sampling", "honeycomb", "telemetry", "tracing"]
categories = ["development-tools::profiling", "config"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
proptest = "1.4"
insta = { version = "1.34", features = ["yaml"] }

# Schema
schemars = "0.8"

# Utilities
xxhash-rust = { version = "0.8", features = ["xxh64"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"

# Workspace crates (for internal dependencies)
toon_policy = { path = "crates/toon_policy" }
nectar_corpus = { path = "crates/nectar_corpus" }
nectar_claude = { path = "crates/nectar_claude" }
nectar_prover = { path = "crates/nectar_prover" }
nectar_compiler = { path = "crates/nectar_compiler" }
nectar_vopr = { path = "crates/nectar_vopr" }

# Deterministic randomness
rand = "0.8"
rand_chacha = "0.3"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
