[package]
name = "nectar"
description = "CLI for Nectar - AI-native sampling policy engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "nectar"
path = "src/main.rs"

[dependencies]
toon_policy.workspace = true
nectar_corpus.workspace = true
nectar_claude.workspace = true
nectar_prover.workspace = true
nectar_compiler.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

[lints]
workspace = true
