[package]
name = "nectar_compiler"
description = "Policy to Refinery rules compiler for Nectar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
toon_policy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true

[lints]
workspace = true
