[package]
name = "nectar_corpus"
description = "Trace corpus management and TOON encoding for Nectar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
otlp = ["opentelemetry-proto", "prost", "hex"]

[dependencies]
toon_policy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
rand_chacha.workspace = true

# OTLP support (optional)
opentelemetry-proto = { version = "0.31", features = ["gen-tonic", "trace"], optional = true }
prost = { version = "0.14", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
proptest.workspace = true
insta.workspace = true

[lints]
workspace = true
