[package]
name = "nectar_vopr"
version = "0.1.0"
edition = "2021"
description = "VOPR-style deterministic simulation testing for Nectar"
license = "MIT"

[dependencies]
# Core nectar crates
toon_policy = { path = "../toon_policy" }
nectar_corpus = { path = "../nectar_corpus" }
nectar_compiler = { path = "../nectar_compiler" }
nectar_prover = { path = "../nectar_prover" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Deterministic randomness
rand = "0.8"
rand_chacha = "0.3"

# Property-based testing
proptest = "1.4"

# Hashing for determinism verification
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Time simulation
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }

# Tracing
tracing = "0.1"

[dev-dependencies]
proptest = "1.4"
insta = { version = "1.34", features = ["yaml"] }
tokio-test = "0.4"

[lints]
workspace = true
